src/main/java/com/github/kechinvv/libslpluginij/antlr/LibSLParser.java
// Generated from /home/valera/IdeaProjects/LibSLPluginIJ/src/main/java/com/github/kechinvv/libslpluginij/antlr/LibSLParser.g4 by ANTLR 4.13.1
package com.github.kechinvv.libslpluginij.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LibSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEMICOLON=1, ASSIGN_OP=2, EQ=3, L_BRACE=4, R_BRACE=5, L_BRACKET=6, R_BRACKET=7, 
		L_SQUARE_BRACKET=8, R_SQUARE_BRACKET=9, DOT=10, COLON=11, COMMA=12, MINUS_ARROW=13, 
		L_ARROW=14, R_ARROW=15, ASTERISK=16, SLASH=17, PERCENT=18, PLUS=19, MINUS=20, 
		INCREMENT=21, DECREMENT=22, PLUS_EQ=23, MINUS_EQ=24, ASTERISK_EQ=25, SLASH_EQ=26, 
		PERCENT_EQ=27, EXCLAMATION=28, EXCLAMATION_EQ=29, L_ARROW_EQ=30, R_ARROW_EQ=31, 
		AMPERSAND=32, DOUBLE_AMPERSAND=33, BIT_OR=34, LOGIC_OR=35, XOR=36, TILDE=37, 
		AMPERSAND_EQ=38, OR_EQ=39, XOR_EQ=40, R_SHIFT_EQ=41, L_SHIFT_EQ=42, APOSTROPHE=43, 
		BACK_QOUTE=44, ImportStatement=45, IncludeStatement=46, IMPORT=47, INCLUDE=48, 
		LIBSL=49, LIBRARY=50, VERSION=51, LANGUAGE=52, URL=53, TYPEALIAS=54, TYPE=55, 
		TYPES=56, ENUM=57, ANNOTATION=58, AUTOMATON=59, CONCEPT=60, VAR=61, VAL=62, 
		INITSTATE=63, STATE=64, FINISHSTATE=65, SHIFT=66, NEW=67, FUN=68, CONSTRUCTOR=69, 
		DESTRUCTOR=70, PROC=71, AT=72, ACTION=73, REQUIRES=74, ENSURES=75, ASSIGNS=76, 
		TRUE=77, FALSE=78, DEFINE=79, IF=80, ELSE=81, BY=82, IS=83, AS=84, NULL=85, 
		Identifier=86, DoubleQuotedString=87, CHARACTER=88, Digit=89, Hex=90, 
		WS=91, BR=92, COMMENT=93, LINE_COMMENT=94, BAD_CHARACTER=95;
	public static final int
		RULE_file = 0, RULE_globalStatement = 1, RULE_topLevelDecl = 2, RULE_header = 3, 
		RULE_typealiasStatement = 4, RULE_typeDefBlock = 5, RULE_targetType = 6, 
		RULE_typeList = 7, RULE_typeDefBlockStatement = 8, RULE_enumBlock = 9, 
		RULE_enumBlockStatement = 10, RULE_typesSection = 11, RULE_semanticTypeDecl = 12, 
		RULE_simpleSemanticType = 13, RULE_enumSemanticType = 14, RULE_enumSemanticTypeEntry = 15, 
		RULE_annotationDecl = 16, RULE_annotationDeclParams = 17, RULE_annotationDeclParamsPart = 18, 
		RULE_actionDecl = 19, RULE_actionDeclParamList = 20, RULE_actionParameter = 21, 
		RULE_automatonDecl = 22, RULE_constructorVariables = 23, RULE_automatonStatement = 24, 
		RULE_implementedConcepts = 25, RULE_concept = 26, RULE_automatonStateDecl = 27, 
		RULE_automatonShiftDecl = 28, RULE_functionsList = 29, RULE_functionsListPart = 30, 
		RULE_variableDecl = 31, RULE_nameWithType = 32, RULE_typeIdentifier = 33, 
		RULE_generic = 34, RULE_variableAssignment = 35, RULE_assignmentRight = 36, 
		RULE_callAutomatonConstructorWithNamedArgs = 37, RULE_namedArgs = 38, 
		RULE_argPair = 39, RULE_headerWithAsterisk = 40, RULE_constructorDecl = 41, 
		RULE_constructorHeader = 42, RULE_destructorDecl = 43, RULE_destructorHeader = 44, 
		RULE_procDecl = 45, RULE_procHeader = 46, RULE_functionDecl = 47, RULE_functionHeader = 48, 
		RULE_functionDeclArgList = 49, RULE_parameter = 50, RULE_annotationUsage = 51, 
		RULE_functionContract = 52, RULE_functionBody = 53, RULE_functionBodyStatement = 54, 
		RULE_ifStatement = 55, RULE_elseStatement = 56, RULE_actionUsage = 57, 
		RULE_procUsage = 58, RULE_expressionsList = 59, RULE_annotationArgs = 60, 
		RULE_argName = 61, RULE_requiresContract = 62, RULE_ensuresContract = 63, 
		RULE_assignsContract = 64, RULE_expression = 65, RULE_hasAutomatonConcept = 66, 
		RULE_bitShiftOp = 67, RULE_lShift = 68, RULE_rShift = 69, RULE_uRShift = 70, 
		RULE_uLShift = 71, RULE_expressionAtomic = 72, RULE_primitiveLiteral = 73, 
		RULE_qualifiedAccess = 74, RULE_simpleCall = 75, RULE_identifierList = 76, 
		RULE_arrayLiteral = 77, RULE_periodSeparatedFullName = 78, RULE_integerNumber = 79, 
		RULE_floatNumber = 80, RULE_identifier = 81;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "globalStatement", "topLevelDecl", "header", "typealiasStatement", 
			"typeDefBlock", "targetType", "typeList", "typeDefBlockStatement", "enumBlock", 
			"enumBlockStatement", "typesSection", "semanticTypeDecl", "simpleSemanticType", 
			"enumSemanticType", "enumSemanticTypeEntry", "annotationDecl", "annotationDeclParams", 
			"annotationDeclParamsPart", "actionDecl", "actionDeclParamList", "actionParameter", 
			"automatonDecl", "constructorVariables", "automatonStatement", "implementedConcepts", 
			"concept", "automatonStateDecl", "automatonShiftDecl", "functionsList", 
			"functionsListPart", "variableDecl", "nameWithType", "typeIdentifier", 
			"generic", "variableAssignment", "assignmentRight", "callAutomatonConstructorWithNamedArgs", 
			"namedArgs", "argPair", "headerWithAsterisk", "constructorDecl", "constructorHeader", 
			"destructorDecl", "destructorHeader", "procDecl", "procHeader", "functionDecl", 
			"functionHeader", "functionDeclArgList", "parameter", "annotationUsage", 
			"functionContract", "functionBody", "functionBodyStatement", "ifStatement", 
			"elseStatement", "actionUsage", "procUsage", "expressionsList", "annotationArgs", 
			"argName", "requiresContract", "ensuresContract", "assignsContract", 
			"expression", "hasAutomatonConcept", "bitShiftOp", "lShift", "rShift", 
			"uRShift", "uLShift", "expressionAtomic", "primitiveLiteral", "qualifiedAccess", 
			"simpleCall", "identifierList", "arrayLiteral", "periodSeparatedFullName", 
			"integerNumber", "floatNumber", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'='", "'=='", "'{'", "'}'", "'('", "')'", "'['", "']'", 
			"'.'", "':'", "','", "'->'", "'<'", "'>'", "'*'", "'/'", "'%'", "'+'", 
			"'-'", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'%='", "'!'", 
			"'!='", "'<='", "'>='", "'&'", "'&&'", "'|'", "'||'", "'^'", "'~'", "'&='", 
			"'|='", "'^='", "'>>='", "'<<='", "'''", "'`'", null, null, "'import'", 
			"'include'", "'libsl'", "'library'", "'version'", "'language'", "'url'", 
			"'typealias'", "'type'", "'types'", "'enum'", "'annotation'", "'automaton'", 
			"'concept'", "'var'", "'val'", "'initstate'", "'state'", "'finishstate'", 
			"'shift'", "'new'", "'fun'", "'constructor'", "'destructor'", "'proc'", 
			"'@'", "'action'", "'requires'", "'ensures'", "'assigns'", "'true'", 
			"'false'", "'define'", "'if'", "'else'", "'by'", "'is'", "'as'", "'null'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SEMICOLON", "ASSIGN_OP", "EQ", "L_BRACE", "R_BRACE", "L_BRACKET", 
			"R_BRACKET", "L_SQUARE_BRACKET", "R_SQUARE_BRACKET", "DOT", "COLON", 
			"COMMA", "MINUS_ARROW", "L_ARROW", "R_ARROW", "ASTERISK", "SLASH", "PERCENT", 
			"PLUS", "MINUS", "INCREMENT", "DECREMENT", "PLUS_EQ", "MINUS_EQ", "ASTERISK_EQ", 
			"SLASH_EQ", "PERCENT_EQ", "EXCLAMATION", "EXCLAMATION_EQ", "L_ARROW_EQ", 
			"R_ARROW_EQ", "AMPERSAND", "DOUBLE_AMPERSAND", "BIT_OR", "LOGIC_OR", 
			"XOR", "TILDE", "AMPERSAND_EQ", "OR_EQ", "XOR_EQ", "R_SHIFT_EQ", "L_SHIFT_EQ", 
			"APOSTROPHE", "BACK_QOUTE", "ImportStatement", "IncludeStatement", "IMPORT", 
			"INCLUDE", "LIBSL", "LIBRARY", "VERSION", "LANGUAGE", "URL", "TYPEALIAS", 
			"TYPE", "TYPES", "ENUM", "ANNOTATION", "AUTOMATON", "CONCEPT", "VAR", 
			"VAL", "INITSTATE", "STATE", "FINISHSTATE", "SHIFT", "NEW", "FUN", "CONSTRUCTOR", 
			"DESTRUCTOR", "PROC", "AT", "ACTION", "REQUIRES", "ENSURES", "ASSIGNS", 
			"TRUE", "FALSE", "DEFINE", "IF", "ELSE", "BY", "IS", "AS", "NULL", "Identifier", 
			"DoubleQuotedString", "CHARACTER", "Digit", "Hex", "WS", "BR", "COMMENT", 
			"LINE_COMMENT", "BAD_CHARACTER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LibSLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LibSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LibSLParser.EOF, 0); }
		public HeaderContext header() {
			return getRuleContext(HeaderContext.class,0);
		}
		public List<GlobalStatementContext> globalStatement() {
			return getRuleContexts(GlobalStatementContext.class);
		}
		public GlobalStatementContext globalStatement(int i) {
			return getRuleContext(GlobalStatementContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LIBSL || _la==LINE_COMMENT) {
				{
				setState(164);
				header();
				}
			}

			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 45)) & ~0x3f) == 0 && ((1L << (_la - 45)) & 2216345959939L) != 0)) {
				{
				{
				setState(167);
				globalStatement();
				}
				}
				setState(172);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(173);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GlobalStatementContext extends ParserRuleContext {
		public TerminalNode ImportStatement() { return getToken(LibSLParser.ImportStatement, 0); }
		public TerminalNode IncludeStatement() { return getToken(LibSLParser.IncludeStatement, 0); }
		public TypesSectionContext typesSection() {
			return getRuleContext(TypesSectionContext.class,0);
		}
		public TypealiasStatementContext typealiasStatement() {
			return getRuleContext(TypealiasStatementContext.class,0);
		}
		public TypeDefBlockContext typeDefBlock() {
			return getRuleContext(TypeDefBlockContext.class,0);
		}
		public EnumBlockContext enumBlock() {
			return getRuleContext(EnumBlockContext.class,0);
		}
		public AnnotationDeclContext annotationDecl() {
			return getRuleContext(AnnotationDeclContext.class,0);
		}
		public ActionDeclContext actionDecl() {
			return getRuleContext(ActionDeclContext.class,0);
		}
		public TopLevelDeclContext topLevelDecl() {
			return getRuleContext(TopLevelDeclContext.class,0);
		}
		public GlobalStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalStatement; }
	}

	public final GlobalStatementContext globalStatement() throws RecognitionException {
		GlobalStatementContext _localctx = new GlobalStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globalStatement);
		try {
			setState(184);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(175);
				match(ImportStatement);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(176);
				match(IncludeStatement);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(177);
				typesSection();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(178);
				typealiasStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(179);
				typeDefBlock();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(180);
				enumBlock();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(181);
				annotationDecl();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(182);
				actionDecl();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(183);
				topLevelDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TopLevelDeclContext extends ParserRuleContext {
		public AutomatonDeclContext automatonDecl() {
			return getRuleContext(AutomatonDeclContext.class,0);
		}
		public FunctionDeclContext functionDecl() {
			return getRuleContext(FunctionDeclContext.class,0);
		}
		public VariableDeclContext variableDecl() {
			return getRuleContext(VariableDeclContext.class,0);
		}
		public TopLevelDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_topLevelDecl; }
	}

	public final TopLevelDeclContext topLevelDecl() throws RecognitionException {
		TopLevelDeclContext _localctx = new TopLevelDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_topLevelDecl);
		try {
			setState(189);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(186);
				automatonDecl();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(187);
				functionDecl();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(188);
				variableDecl();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class HeaderContext extends ParserRuleContext {
		public Token lslver;
		public IdentifierContext libraryName;
		public Token ver;
		public Token lang;
		public Token link;
		public List<TerminalNode> SEMICOLON() { return getTokens(LibSLParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(LibSLParser.SEMICOLON, i);
		}
		public TerminalNode LIBSL() { return getToken(LibSLParser.LIBSL, 0); }
		public TerminalNode LIBRARY() { return getToken(LibSLParser.LIBRARY, 0); }
		public TerminalNode LINE_COMMENT() { return getToken(LibSLParser.LINE_COMMENT, 0); }
		public List<TerminalNode> DoubleQuotedString() { return getTokens(LibSLParser.DoubleQuotedString); }
		public TerminalNode DoubleQuotedString(int i) {
			return getToken(LibSLParser.DoubleQuotedString, i);
		}
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode VERSION() { return getToken(LibSLParser.VERSION, 0); }
		public TerminalNode LANGUAGE() { return getToken(LibSLParser.LANGUAGE, 0); }
		public TerminalNode URL() { return getToken(LibSLParser.URL, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_header);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LINE_COMMENT) {
				{
				setState(191);
				match(LINE_COMMENT);
				}
			}
